# clinical-redteam

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  ARCHITECTURE.md  LICENSE  README.md  RESPONSIBLE_USE.md  SETUP.md  THREAT_MODEL.md  USERS.md  pyproject.toml  requirements-dev.txt  requirements.txt
.deploy/: Caddyfile.fragment  Dockerfile  bootstrap.sh  docker-compose.redteam.yml
.github/workflows/: ci.yml
docs/: AGENT-COORDINATION-GUIDE.html  AgentForge_Architecture_Defense.pptx  MVP-SUBMISSION-CHECKLIST.html  MVP-WORK-PLAN.html  MVP-WORK-PLAN.md  PRD-REQUIREMENTS.html  W3-LEAD-PLAN.html  cost-analysis.md  presearch-conversation.md  presearch.html  week_3_architecture_rewrite_feedback.md
docs/research/: README.md  presearch-architecture-research.md  presearch-ops-research.md  security-frameworks-research.md
evals/criteria/: prompt_injection.yaml  sensitive_information_disclosure.yaml  unbounded_consumption.yaml
evals/ground-truth/: judge-calibration.yaml
evals/methodology/: 2026-05-14-calibration-after-f24.json  2026-05-14-calibration-after-f26.json  2026-05-14-calibration-before-f18.json  2026-05-14-judge-confabulation-catch.md  key-narratives.md
evals/vulnerabilities/: .gitkeep  HANDOFF-to-W2-VULN-002-003.md  VULN-001-c7-cross-patient-paraphrased-leakage.md  VULN-002-DRAFT.md  VULN-003-DRAFT.md  VULN-WITHDRAWN-001-pre-F25-judge-confabulation.md
scripts/: overnight_targeted_attacks.sh  report_burst_results.sh  run_judge_calibration.py
src/clinical_redteam/: __init__.py  content_filter.py  cost_ledger.py  coverage.py  observability.py  openrouter.py  persistence.py  run.py  schemas.py  target_client.py
tests/: test_content_filter.py  test_cost_ledger.py  test_coverage.py  test_observability.py  test_openrouter.py  test_persistence.py  test_run.py  test_schemas.py  test_status_app.py  test_target_client.py
(+42 files in other folders)
