[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-redteam"
description = "Clinical Red Team Platform — adversarial multi-agent AI security tester for the AgentForge Clinical Co-Pilot."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Cory Vandenberg" }]
keywords = [
  "ai-security",
  "red-team",
  "owasp-llm",
  "adversarial-ml",
  "langgraph",
  "healthcare-ai",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]
dynamic = ["version", "dependencies", "optional-dependencies"]

[project.urls]
Homepage = "https://github.com/TradeUpCards/clinical-redteam"
Source = "https://github.com/TradeUpCards/clinical-redteam"
Mirror = "https://labs.gauntletai.com/coryvandenberg/clinical-redteam"
Target = "https://github.com/TradeUpCards/agentforge"

[project.scripts]
clinical-redteam = "clinical_redteam.run:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["clinical_redteam*"]

[tool.setuptools.dynamic]
version = { attr = "clinical_redteam.__version__" }
dependencies = { file = ["requirements.txt"] }
optional-dependencies = { dev = { file = ["requirements-dev.txt"] } }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
